--- a/AI_review_guide.qmd
+++ b/AI_review_guide.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Guide to Using AI in Literature Searching and Screening for Evidence Syntheses"
 author: 
-  - "Matt Grainger"
+  - "Matthew Grainger"
   - "Frode Thomassen Singsaas"
 format: html
 version: "0.1"
